Fetch workout route added
